--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install pytest
+          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+
+      - name: Run ruff
+        run: |
+          python -m ruff check .
+
+      - name: Run mypy
+        run: |
+          python -m mypy domain services ocr storage
 
       - name: Run tests
         run: pytest
