--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dev = [
     "mypy",
     "pytest",
     "pytest-asyncio",
+    "pytest-cov",
 ]
 
 [project.scripts]
@@ -47,4 +48,13 @@ py-modules = ["config", "bot"]
 [tool.pytest.ini_options]
 markers = [
     "storage_db: integration tests for storage with real SQLite and Alembic migrations",
+]
+addopts = [
+    "--cov=domain",
+    "--cov=services",
+    "--cov=ocr",
+    "--cov=storage",
+    "--cov=handlers",
+    "--cov-report=term-missing",
+    "--cov-fail-under=70",
 ]
