--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,3 @@
--r requirements.txt
-pytest
-pytest-asyncio
-pytest-cov
-ruff
-mypy
-
+# Dev installation of InvoiceFlowBot.
+# All dependency versions are defined in pyproject.toml extras.
+.[dev]
