--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
-aiogram>=3.10
-aiosqlite>=0.20.0
-alembic>=1.13.0
-httpx>=0.27.0
-pydantic>=2.8.0
-pydantic-settings>=2.2.0
-python-dotenv>=1.0.1
-Pillow>=10.4.0
-mindee>=4.27.0
-requests>=2.31.0
+# Runtime installation of InvoiceFlowBot.
+# All dependency versions are defined in pyproject.toml.
+.
