--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,81 @@
-__pycache__/
-venv/
-.venv/
-.git/
-.env
-logs/
+# Git
+.git
+.gitignore
+.gitattributes
+
+# Python
+__pycache__
 *.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info
+.venv
+venv/
+env/
+ENV/
+
+# Testing
+tests/
 .pytest_cache/
+.coverage
+htmlcov/
+.mypy_cache/
+.pytest_cache/
+
+# Documentation
+docs/
+*.md
+!README.md
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Environment
+.env
+.env.*
+!.env.example
+
+# Build artifacts
+.dist/
+.build/
+dist/
+build/
+*.egg-info/
+
+# Logs
+logs/
+*.log
+
+# Temporary files
+temp/
+tmp/
+*.tmp
+
+# Docker
+Dockerfile
+docker-compose.yml
+.dockerignore
+
+# CI/CD
+.github/
+
+# Data (will be mounted or created at runtime)
+data.sqlite
+data.sqlite-journal
+data/
+
+# Coverage
+.coverage
+coverage.xml
+*.cover
+
+# OS
+.DS_Store
+Thumbs.db
