--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
-version: "3.8"
-
 services:
   bot:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: invoiceflowbot:latest
     restart: unless-stopped
     env_file:
       - .env
