--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,18 @@ repos:
         pass_filenames: false
         require_serial: true
 
+      - id: bandit
+        name: bandit
+        entry: bandit
+        language: system
+        types: [python]
+        pass_filenames: false
+        args:
+          - "-c"
+          - "bandit.yaml"
+          - "domain"
+          - "services"
+          - "ocr"
+          - "storage"
+          - "handlers"
+
