--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,3 +61,54 @@ addopts = [
     "--cov-report=term-missing",
     "--cov-fail-under=70",
 ]
+
+[tool.ruff]
+line-length = 100
+target-version = "py311"
+
+[tool.ruff.lint]
+select = [
+    "E",
+    "F",
+    "I",
+]
+ignore = [
+    "E501",
+]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+line-ending = "lf"
+
+[tool.mypy]
+python_version = "3.11"
+ignore_missing_imports = true
+allow_redefinition = false
+strict_optional = true
+warn_return_any = true
+warn_unused_ignores = true
+
+[[tool.mypy.overrides]]
+module = "handlers.*"
+ignore_errors = false
+
+[[tool.mypy.overrides]]
+module = "ocr.*"
+ignore_errors = false
+
+[[tool.mypy.overrides]]
+module = "services.*"
+ignore_errors = false
+
+[[tool.mypy.overrides]]
+module = "storage.*"
+ignore_errors = false
+
+[[tool.mypy.overrides]]
+module = "domain.*"
+ignore_errors = false
+
+[[tool.mypy.overrides]]
+module = "tests.*"
+ignore_errors = true
