--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -25,24 +25,23 @@ jobs:
         run: touch data.sqlite
 
       - name: Start services
-        run: docker-compose up -d --build
+        run: docker compose up -d --build
 
       - name: Wait for bot to start
         run: |
-          timeout 60 bash -c 'until docker-compose ps | grep -q "Up"; do sleep 2; done' || true
+          timeout 60 bash -c 'until docker compose ps | grep -q "Up"; do sleep 2; done' || true
           sleep 5
 
       - name: Check container status
-        run: docker-compose ps
+        run: docker compose ps
 
       - name: Check logs
-        run: docker-compose logs --tail=50
+        run: docker compose logs --tail=50
 
       - name: Health check
         run: |
-          docker-compose exec -T bot python healthcheck.py || exit 1
+          docker compose exec -T bot python healthcheck.py || exit 1
 
       - name: Cleanup
         if: always()
-        run: docker-compose down -v
-
+        run: docker compose down -v
