fix(ci): Add env vars to Docker structure verification step
 Fixed pydantic validation error:
- Entrypoint runs alembic migrations which require BOT_TOKEN
- Added env vars to 'docker run --rm' command for structure check
- Prevents ValidationError when checking image files

 Only docker.yml changed as requested

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -46,7 +46,12 @@ jobs:
       - name: Verify image structure
         run: |
           # Verify that the image has all necessary files
-          docker run --rm invoiceflowbot:test ls -la /app/bot.py /app/config.py || exit 1
+          # Pass env vars to avoid pydantic validation errors during file check
+          docker run --rm \
+            -e BOT_TOKEN=123456789:ABCdefGHIjklMNOpqrsTUVwxyz \
+            -e MINDEE_API_KEY=test-key \
+            -e MINDEE_MODEL_ID=test-model \
+            invoiceflowbot:test ls -la /app/bot.py /app/config.py || exit 1
           echo "✅ Image structure is correct"
 
       - name: Cleanup
