fix: Replace --exclude-localhost with --exclude-loopback in docs.yml
 Fixed lychee-action argument:
- Changed --exclude-localhost to --exclude-loopback
- Resolves error: unexpected argument '--exclude-localhost' found

The --exclude-loopback argument is the correct option for excluding
localhost/loopback addresses in lychee link checker.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Check broken links
         uses: lycheeverse/lychee-action@v1
         with:
-          args: '--accept 200,403,429 --exclude-mail --exclude-private --exclude-localhost --exclude-file .lycheeignore **/*.md'
+          args: '--accept 200,403,429 --exclude-mail --exclude-private --exclude-loopback --exclude-file .lycheeignore **/*.md'
           fail: true
 
       - name: Validate markdown
