--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -32,9 +32,8 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          pytest --cov=domain --cov=services --cov=ocr --cov=storage --cov=handlers \
-            --cov-report=xml --cov-report=term-missing \
-            --import-mode=importlib
+          pytest --cov=. --cov-report=xml --cov-report=term-missing \
+            --cov-fail-under=80 --import-mode=importlib
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
