test: increase coverage to 80% by rewriting tests to call real handlers
- Rewrite tests to use router.trigger() instead of copying handler logic
- Add tests for callbacks_edit, commands_drafts, commands_invoices, callbacks_misc
- Add edge case tests (empty values, invalid formats, missing data)
- Add tests for legacy commands (/edit, /edititem)
- Coverage: 59% -> 80.01% (+21.01%)
- All 194 tests passing

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -32,9 +32,9 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          pytest --cov=domain --cov=services --cov=ocr --cov=storage --cov=handlers \
+          pytest --cov=. --cov-config=.coveragerc \
             --cov-report=xml --cov-report=term-missing \
-            --cov-fail-under=59
+            --cov-fail-under=80
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
