--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,14 +28,14 @@ jobs:
           python -m pip install -e .[dev]
 
       - name: Run DB migrations
-        run: python -m alembic upgrade head
+        run: python -m alembic -c backend/alembic.ini upgrade head
 
       - name: Pre-commit (ruff, format, mypy)
         run: pre-commit run --all-files
 
       - name: Run mypy
         run: |
-          python -m mypy domain services ocr storage handlers
+          python -m mypy backend/
 
       - name: Run unit tests (no storage DB)
         run: pytest --import-mode=importlib -m "not storage_db"
