--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,11 +28,11 @@ jobs:
           python -m pip install -e .[dev]
 
       - name: Run DB migrations
-        run: python -m alembic upgrade head
+        run: python -m alembic -c backend/alembic.ini upgrade head
 
       - name: Run tests with coverage
         run: |
-          pytest --cov=. --cov-config=.coveragerc \
+          pytest --cov=backend --cov-config=.coveragerc \
             --cov-report=xml --cov-report=term-missing \
             --cov-fail-under=80
 
