--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
     hooks:
       - id: mypy
         name: mypy
-        entry: python -m mypy domain services ocr storage handlers
+        entry: python -m mypy backend/
         language: system
         types: [python]
         pass_filenames: false
@@ -33,8 +33,4 @@ repos:
         args:
           - "-c"
           - "bandit.yaml"
-          - "domain"
-          - "services"
-          - "ocr"
-          - "storage"
-          - "handlers"
+          - "backend/"
